add People exercise and relative basic tests